--- a/lecture/04-object/03-extra-object-syntax.html
+++ b/lecture/04-object/03-extra-object-syntax.html
@@ -77,8 +77,8 @@
     printInfo(person) // '이름: Bob, 나이: 35, 도시: London'
 
     // 5. 전개 구문
-    const obj = { b: 2, c: 3, d: 4 }
-    const newObj = { a: 1, ...obj, e: 5 }
+    const obj = { a: 1, b: 2, c: 3, d: 4 }
+    const newObj = { a: 2, ...obj, e: 5 }
     console.log(newObj) // {a: 1, b: 2, c: 3, d: 4, e: 5}
 
     // 6. 유용한 객체 메서드
