--- a/lecture/06-controlling-event/08-practice-click-input-event.html
+++ b/lecture/06-controlling-event/08-practice-click-input-event.html
@@ -39,14 +39,14 @@
       h1Tag.classList.add('blue')
 
       // 2. toggle 방법
-      // h1Tag.classList.toggle('blue')
+      h1Tag.classList.toggle('blue')
 
       // 3. if 방법
-      // if (h1Tag.classList.value) {
-      //   h1Tag.classList.remove('blue')
-      // } else {
-      //   h1Tag.classList.add('blue')
-      // }
+      if (h1Tag.classList.value) {
+        h1Tag.classList.remove('blue')
+      } else {
+        h1Tag.classList.add('blue')
+      }
     }
 
     btn.addEventListener('click', clickHandler)
