--- a/lecture/06-controlling-event/09-practice-todo.html
+++ b/lecture/06-controlling-event/09-practice-todo.html
@@ -13,7 +13,7 @@
   <input type="text" class="input-text">
   <button id="btn">+</button>
   <ul></ul>
-
+  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
   <script>
     // 1. 필요한 요소 선택
     const inputTag = document.querySelector('.input-text')
